# DuwhiteSistema

./: .env.example  .gitignore  ADELANTO + HS. EXTRAS 2026.xlsx  ALTA_FACTURACION_ELECTRONICA.md  CLAUDE.md  CLIENTES DUWHITE - deudas.xlsx  README.md  docker-compose.yml  inicial.md  railway.toml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 20260304092218_add_calificacion_to_proveedores.py  20260304092500_add_ordenes_produccion.py  20260310100000_add_finanzas_avanzadas.py  20260310120000_add_pin_to_usuarios.py  20260320100000_add_cc_cliente_fields.py  20260323100000_add_tesoreria.py  20260324_add_jornales_fields.py  20260325100000_add_liquidacion_control.py  20260327100000_add_moneda_cuentas_bancarias.py  20260408100000_add_dias_franco_feriado.py  20260409100000_add_produccion_v2.py  20260409110000_update_etapas_produccion.py  20260411100000_add_tipo_lote_to_lotes.py  20260415100000_add_estirado_bifurcacion.py  20260420100000_add_lotes_etapas_maquinas.py  20260421100000_add_siguiente_etapa_id.py  20260423100000_create_facturas.py  20260423110000_add_estado_pago_factura.py  20260507100000_add_factura_id_to_movimientos_cc.py  20260508100000_add_aplicaciones_pago_factura.py  (+11 more)
backend/app/: __init__.py  main.py
backend/scripts/: crear_superadmin.py  fix_alembic_heads.py  generar_csr_arca.sh  importar_clientes_deudas.py  importar_jornales_excel.py  limpiar_jornales_futuros.py  purgar_lotes_archivados.py  sincronizar_saldos_cuenta_corriente.py
(+317 files in other folders)
